# trajectory_saver

./: CMakeLists.txt  README.md  package.xml
default_warehouse_mongo_db/: .gitignore  WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--4370029719822686640.wt  collection-0-7540001904884178564.wt  collection-2-8757542044793264652.wt  collection-4-8757542044793264652.wt  index-1--4370029719822686640.wt  index-1-7540001904884178564.wt  index-3-8757542044793264652.wt  index-5-8757542044793264652.wt  index-6-8757542044793264652.wt  sizeStorer.wt
default_warehouse_mongo_db/diagnostic.data/: metrics.2024-11-20T16-12-24Z-00000  metrics.2024-11-21T08-27-53Z-00000  metrics.2024-11-21T08-29-57Z-00000  metrics.2024-11-21T08-32-18Z-00000
launch/: trajectory_database.launch
scripts/: trajectory_saver.py
